--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,42 @@
     .login-button{
         width: 85%;
     }
+    div.theme-toggler-image.d-flex{
+        margin-left: 0px;
+    }
   }
 
 
+/*theme toggle start*/
+.theme-light{
+    background-color: white;
+}
+.theme-dark{
+    background-color: #171819;
+    color: #fff;
+}
+.theme-toggler-image img{
+   border-radius: 15px;
+}
+.theme-toggler-container{
 
+}
+.theme-icons{
+    height: 40px;
+    cursor: pointer;
+    padding: 1px;
+
+}
+
+.activeth{
+    border: solid white 2px ;
+}
+
+.footer-dark{
+    background-color: #032830;
+    color: #fff;
+}
+/*theme toggle end*/
 
 /*Start Footer */
 
