added some illustrations

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+*{
+    font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
 @media only screen and (max-width: 991px) {
     .signin-button{
      width: 85%;
@@ -42,6 +49,34 @@
     color: #fff;
 }
 /*theme toggle end*/
+
+
+
+
+
+
+
+
+
+/*illu images start*/
+.illu-container{
+   border-radius: 15px;
+}
+
+.illu-images{
+    height: 150px;
+    padding: 10px;
+    border:solid grey 0.5px;
+    border-radius: 15px;
+}
+
+
+/* illu images end*/
+
+
+
+
+
 
 /*Start Footer */
 
